--- a/Arcadia/templates/footer.html
+++ b/Arcadia/templates/footer.html
@@ -10,9 +10,9 @@
         <div class="col-sm-6 my-3">
             Made with ♥ by: <br> 
             Vinay Kakkad<a href="https://www.linkedin.com/in/vinay-kakkad-18978a1a4/">  <i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/vinaykakkad">  <i class="fab fa-github"></i><br> 
+                        <a href="https://github.com/vinaykakkad">  <i class="fab fa-github"></i><br></a> 
             Samkit Kundalia <a href="https://www.linkedin.com/in/samkitk/">  <i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/samkitk">  <i class="fab fa-github"></i> 
+                            <a href="https://github.com/samkitk">  <i class="fab fa-github"></i></a>
         </div>
     </div>
 </div>
