--- a/Arcadia/questions/static/questions/css/questions.css
+++ b/Arcadia/questions/static/questions/css/questions.css
@@ -1,36 +1,59 @@
 body {
-    background-color: #2D2D2A;
+    /* background-color: #2D2D2A; */
+}
+/* #b80b22 */
+
+.question-box {
+	border: 2px solid #f5dd04;
+	border-radius: 20px;
 }
 
-.question_class {
-    color: #E6E8E6;
-    padding: 20px;
-    text-align: center;
-    font-size: 20px;
+.box-heading {
+	background-color: #f5dd04;
+	border-radius: 15px;
+	color: #b80b22;
+	width: 100%;
+	font-size: larger;
 }
 
-.img_class {
-    height: 90vw;
-    width: 90vw;
-    max-width: 900px;
-    max-height: 582px;
+.question-class {
+	color: white;
+}
+
+.img-class {
+	width: 60%;
+}
+
+.form-class {
+	background-color: #f5dd04;
+	border-radius: 15px;	
+}
+
+.field, .button {
+	width: 100px;
+	height: 35px;
+	border: 2px solid #b80b22;
+	color: #f5dd04;
+	border-radius: 10px;
+	background-color: #b80b22;
 }
 
 .field {
-    height: 40px;
-    margin: 6 0 16 0;
-    background-color: whitesmoke;
-    color: #2D2D2A;
-    border: 2px solid #2D2D2A;
-    padding: 16px;
+	width: 200px;
 }
 
-.form_class {
-    text-align: center;
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: #f5dd04;
+	text-align: center;
+	opacity: 1; /* Firefox */
 }
-
-.centerx {
-    margin-left: 50%;
-    transform: translateX(-50%);
-    margin-right: 10px;
+  
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+	color: #f5dd04;
+	text-align: center;
+}
+  
+::-ms-input-placeholder { /* Microsoft Edge */
+	color: #f5dd04;
+	text-align: center;
 }
