--- a/Arcadia/templates/navbar.html
+++ b/Arcadia/templates/navbar.html
@@ -29,7 +29,7 @@
             </li>
             {% else %}
             <li class="nav-item ">
-                <a class="nav-link nav-link-class" href="{% url 'user_login' %}">Login</a>
+                <a class="nav-link nav-link-class" href="{% url 'login' %}">Login</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link nav-link-class" href="{% url 'register' %}">Register</a>
