--- a/Arcadia/templates/footer.html
+++ b/Arcadia/templates/footer.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-sm-6 my-3">
             Reach out to us on: <br>
-            quiz.club@ahduni.edu.in<a href="https://www.instagram.com/au_quiz_club/">   <i class="fab fa-instagram"></i></a><br>
+            tmc@ahduni.edu.in<a href="https://www.instagram.com/ahduni_tmc/">   <i class="fab fa-instagram"></i></a><br>
         </div>
         <div class="col-sm-6 my-3">
             Made with ♥ by: <br> 
