--- a/Arcadia/home/templates/home/home.html
+++ b/Arcadia/home/templates/home/home.html
@@ -24,7 +24,7 @@
 						</p>
 						{% if request.user.is_authenticated%}
 							<a href="{% url 'questions' %}">
-								<button class="btn crack-button">Crack the code</button>
+								<button class="btn crack-button">Crack The Code</button>
 							</a>
 						{% else %}
 							<a href="{% url 'login' %}">
