adding about and past events section and improving ui

--- a/Arcadia/home/templates/home/home.html
+++ b/Arcadia/home/templates/home/home.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 	<section id="home-body">
-		<div class="container">
+		<div class="container d-flex align-items-center home-main">
 			<div class="row">
 				<div class="col-md-7 order-1 order-md-2 d-flex align-items-center justify-content-center">
 					<div class="container image-box">
@@ -16,7 +16,7 @@
 					</div>
 				</div>	
 				<div class="col-md-5 order-2 order-md-1 d-flex align-items-center justify-content-center">
-					<div class="container description-box">
+					<div class="container mb-5 description-box">
 						<h1 class="heading">Arcadia</h1>
 						<div class="mt-0 mb-3 underline"></div>
 						<p class="sub-heading">
@@ -31,7 +31,7 @@
 								<button class="btn crack-button">Login</button>
 							</a>
 						{% endif %}
-						</div>
+					</div>
 				</div>
 			</div>
 		</div>
