--- a/Arcadia/home/templates/home/leaderboard.html
+++ b/Arcadia/home/templates/home/leaderboard.html
@@ -2,39 +2,39 @@
 {% load static %}
 
 {% block head %}
-<title>Leaderboard</title>
-<link rel="stylesheet" href="{% static 'home/css/leaderboard.css'%}">
+	<title>Leaderboard</title>
+	<link rel="stylesheet" href="{% static 'home/css/leaderboard.css'%}">
 {% endblock %}
 
 {% block content %}
-<section id="leaderboard-body">
-	<div class="container">
-		<div class="mx-auto d-flex justify-content-center shadow heading">
-			LEADERBOARD
-		</div>
-		<div class="container mt-5">
-			<table class="table table-striped table-hover shadow text-white">
-				<tr>
-					<th> <b>Firstname</b> </th>
-					<th> <b>Points</b> </th>
-				</tr>
-				{% for user in users %}
-					<tr class="table-row">
-						<td>
-							{% if forloop.counter == 1 %}
-								<img src="{% static 'images/gold.svg'%}" height="28px" class="m-0 p-0">
-							{% elif forloop.counter == 2 %}
-								<img src="{% static 'images/silver.svg'%}" height="28px" class="m-0 p-0">
-							{% elif forloop.counter == 3 %}
-								<img src="{% static 'images/bronze.svg'%}" height="28px" class="m-0 p-0">
-							{% endif %}
-							{{user.username}} 
-						</td>
-						<td>{{user.get_points}}</td>
+	<section id="leaderboard-body">
+		<div class="container d-flex align-items-center leaderboard-main">
+			<div class="container">
+				<div class="mx-auto d-flex justify-content-center shadow heading">
+					LEADERBOARD
+				</div>
+				<table class="mt-5 table table-striped table-hover shadow text-white">
+					<tr>
+						<th> <b>Firstname</b> </th>
+						<th> <b>Points</b> </th>
 					</tr>
-				{% endfor %}
-			</table>
+					{% for user in users %}
+						<tr class="table-row">
+							<td>
+								{% if forloop.counter == 1 %}
+									<img src="{% static 'images/gold.svg'%}" height="28px" class="m-0 p-0">
+								{% elif forloop.counter == 2 %}
+									<img src="{% static 'images/silver.svg'%}" height="28px" class="m-0 p-0">
+								{% elif forloop.counter == 3 %}
+									<img src="{% static 'images/bronze.svg'%}" height="28px" class="m-0 p-0">
+								{% endif %}
+								{{user.username}} 
+							</td>
+							<td>{{user.get_points}}</td>
+						</tr>
+					{% endfor %}
+				</table>
+			</div>
 		</div>
-	</div>
-</section>
+	</section>
 {% endblock %}
