--- a/Arcadia/templates/footer.html
+++ b/Arcadia/templates/footer.html
@@ -1,17 +1,32 @@
 {% load static %}
 
-<div class="container-fluid footer">
-    <div class="row">
-        <div class="col-sm-6 my-3">
-            Reach out to us on: <br>
-            quiz.club@ahduni.edu.in<a href="https://www.instagram.com/au_quiz_club/">   <i class="fab fa-instagram"></i></a><br>
-        </div>
-        <div class="col-sm-6 my-3">
-            Made with ♥ by: <br> 
-            Vinay Kakkad<a href="https://www.linkedin.com/in/vinay-kakkad-18978a1a4/">  <i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/vinaykakkad">  <i class="fab fa-github"></i><br></a> 
-            Samkit Kundalia <a href="https://www.linkedin.com/in/samkitk/">  <i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/samkitk">  <i class="fab fa-github"></i></a>
-        </div>
-    </div>
-</div>
+<section id="footer">
+	<div class="container-fluid footer">
+		<div class="row">
+			<div class="col-sm-6 my-3">
+				Reach out to us on:<br>
+				tmc@ahduni.edu.in
+				<a href="https://www.instagram.com/ahduni_tmc/" target="_blank">   
+					<i class="fab fa-instagram"></i>
+				</a><br>
+			</div>
+			<div class="col-sm-6 my-3">
+				Made with ♥ by: <br> 
+				Vinay Kakkad
+				<a href="https://www.linkedin.com/in/vinaykakkad/" target="_blank">
+					<i class="fab fa-linkedin"></i>
+				</a>
+				<a href="https://github.com/vinaykakkad" target="_blank">  
+					<i class="fab fa-github"></i>
+				</a><br> 
+				Samkit Kundalia 
+				<a href="https://www.linkedin.com/in/samkitk/" target="_blank">  
+					<i class="fab fa-linkedin"></i>
+				</a>
+				<a href="https://github.com/samkitk" target="_blank">  
+					<i class="fab fa-github"></i>
+				</a>
+			</div>
+		</div>
+	</div>
+</section>
