--- a/Arcadia/home/templates/home/home.html
+++ b/Arcadia/home/templates/home/home.html
@@ -12,7 +12,7 @@
 			<div class="row">
 				<div class="col-md-7 order-1 order-md-2 d-flex align-items-center justify-content-center">
 					<div class="container image-box">
-						<img src="{% static 'images/banner-img.svg' %}">
+						<img src="{% static 'images/banner.png' %}" width="100%">
 					</div>
 				</div>	
 				<div class="col-md-5 order-2 order-md-1 d-flex align-items-center justify-content-center">
