--- a/Arcadia/home/templates/home/instructions.html
+++ b/Arcadia/home/templates/home/instructions.html
@@ -2,73 +2,47 @@
 {% load static %} 
 
 {% block head %}
-<title>Instruction</title>
-<link rel="stylesheet" href="{% static 'css/instructions.css'%}"> 
+	<title>Instruction</title>
+	<link rel="stylesheet" href="{% static 'home/css/instructions.css'%}"> 
 {% endblock %} 
 
 {% block content %}
-<h3 style="color: #E6E8E6; text-align:center" class="center-mx mt-5">General Instructions</h3>
-
-<div class="container box center-mx my-5">
-    <ol>
-        <li>
-            Each participant will have to register using a unique username(TEAM NAME) and email(your ahduni email). This would help us in tracking the progress and will also allow the participant to re-login easily in case they log
-            out. You can find the detailed instructions for the platform <a href="https://docs.google.com/document/d/1TN4oDmYJH1gVRsgm7yZIbrQ9gIgo3Va8RKHmD98PfCc/edit?usp=sharing
-">here</a>.
-        </li>
-        <li>
-            We will have a WhatsApp group formed of the participants where we will be available to answer any of your queries and questions.
-            Join the group : <a href="https://chat.whatsapp.com/FcLCb2jmcD7FerLGQAxW0Q">BizHunt Announcements</a> 
-        </li>
-        <li>
-            As the participants log in, they’ll be able to see a question when the hunt begins. Each individual/team will move ahead by answering the business-related questions.
-        </li>
-        <li>
-            A correct answer would unlock the next question, leading the individual/team forward in the game. It is important to note that a participants will only be able to view the next question by correctly answering the first one.
-        </li>
-        <li>
-            Hints for each question will be posted in the aforesaid WhatsApp group after a certain amount of time has passed, so that the participants could move further with the questions. Hints will be unveiled slowly and order-wise.
-        </li>
-        <li>
-            The participants must try to answer the questions as quickly as possible and thus reach to the end of the trivia.
-        </li>
-        <li>
-            There would be a total of 15 questions that an individual/team will have to answer within 2 hours in order to reach the final treasure.
-        </li>
-        <li>
-            The progress of each individual/team will be tracked by our leaderboard which will ensure fair play.
-        </li>
-        <li>
-            The first three individuals/teams to answer the final question will be the winners.
-        </li>
-</div>
-
-<h3 style="color: #E6E8E6; text-align:center" class="center-mx my-5">Quiz Rules</h3>
-
-<div class="container box center-mx">
-    <ol>
-        <li>
-            This is a “Business” themed Treasure Hunt. Think accordingly!
-        </li>
-        <li>
-            Since this is an Online Treasure Hunt, you are free to roam the virtual world of the
-            internet to search for clues. You may also use your brain to roam around though!
-        </li>
-        <li>
-            Since you have been given the liberty to Google, the problems will tend to be
-            google-proof. You won’t have an easy time cracking most of the clues. Hence, we have
-            decided to give away hints at every step, like charity! But this charity will surely cost you
-            something at end because it must be clear that in business everything comes at a price!
-        </li>
-        <li>
-            In order to advance, the team must either give a business concept or an entity-product combination at each level!
-        </li>
-        <li>
-            Even though superficially, in the end, everything is connected!
-        </li>
-        <li>
-            One of the purposes of this event is to instil in you all a certain method of thinking and perceiving your environment. In simple terms, it’s called Lateral Thinking.sed, so that the participants could move further with the questions. Hints will be unveiled slowly and order-wise.
-        </li>
-    </ol>
-</div>
+	<section>
+		<div class="container d-flex align-items-center instructions-main">
+			<div class="container mx-auto my-5 instructions-box">
+				<div class="mx-auto d-flex justify-content-center shadow heading">
+					INSTRUCTIONS
+				</div>
+				<div class="container mt-5 py-5 shadow">
+					<p class="text-white">
+						<b>Crack The Code</b>
+						<br><br>
+						<b>
+							Put your business knowledge to test by cracking the code through emoticons, logos, gibberish and much more.
+						</b>
+						<br><br>	
+						This round is just a teaser, and will test your knowledge about different brands. 
+						<br><br>
+						This round will be conducted on our gaming portal TMC Arcadia, which is our in-house production. The details regarding the same will be shared on the day of the event.
+						<br><br>
+						There will be a total <b>20 questions</b> in this round, the total duration for the same will be 30mins (out of which 5 mins are allotted towards demo questions.)
+						<br><br>
+						Categories of questions are as follows:  <b>Advertisements, GIFs, Code, Gibberish, Emojis.</b> 
+						<br><br>
+						<b>Each category will have 4 sub-questions.</b> 
+						<br><br>
+						Note: that the answers are <b>case sensitive as well as space sensitive</b>. Hence, for example the answer to a question is Ahmedabad University, you are supposed to write it as ahmedabaduniversity. 
+						<br><br>
+						Note that one member from each team will make an account on the portal with their team name as their username. Once the account for the group is made, the credentials of the same can be shared among other group members. Thereafter, every member can log in using the same credentials and start playing the game. 
+						<br><br>
+						Scoring: Each right answer gets you +1. No negative marking. Only the right answers will get you to the subsequent questions.
+						<br><br>
+						Time: Total 30 mins. Initial 5 mins for demo questions. (The sooner you clear the demo question, the better)
+						<br>
+						The <b>TOP 10 </b>teams at the end of 30 mins will be qualified to play the next round. 
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
