--- a/Arcadia/home/templates/home/leaderboard.html
+++ b/Arcadia/home/templates/home/leaderboard.html
@@ -9,7 +9,7 @@
 {% block content %}
 	<section id="leaderboard-body">
 		<div class="container d-flex align-items-center leaderboard-main">
-			<div class="container">
+			<div class="container my-5">
 				<div class="mx-auto d-flex justify-content-center shadow heading">
 					LEADERBOARD
 				</div>
