--- a/Arcadia/home/templates/home/instructions.html
+++ b/Arcadia/home/templates/home/instructions.html
@@ -31,7 +31,7 @@
 						<br><br>
 						<b>Each category will have 4 sub-questions.</b> 
 						<br><br>
-						Note: that the answers are <b>case sensitive as well as space sensitive</b>. Hence, for example the answer to a question is Ahmedabad University, you are supposed to write it as ahmedabaduniversity. 
+						Note: that the answers are <b>lower-case only without spaces</b>. Hence, for example the answer to a question is Ahmedabad University, you are supposed to write it as ahmedabaduniversity. 
 						<br><br>
 						Note that one member from each team will make an account on the portal with their team name as their username. Once the account for the group is made, the credentials of the same can be shared among other group members. Thereafter, every member can log in using the same credentials and start playing the game. 
 						<br><br>
