--- a/Arcadia/home/templates/home/home.html
+++ b/Arcadia/home/templates/home/home.html
@@ -20,7 +20,7 @@
 						<h1 class="heading">Arcadia</h1>
 						<div class="mt-0 mb-3 underline"></div>
 						<p class="sub-heading">
-							An online treasure hunt where the participants will have to hunt for the answers and clues in order to reach to the end, thus unveiling the treasure.
+							An online treasure hunt where the participants will have to hunt for the answers and clues in order to reach to the end, thus unveiling the treasure.(Quiz Opens at 3:25PM, till 3:55PM)
 						</p>
 						{% if request.user.is_authenticated%}
 							<a href="{% url 'questions' %}">
